--- a/k8s-specification/frontend-deployment.yaml
+++ b/k8s-specification/frontend-deployment.yaml
@@ -21,4 +21,4 @@ spec:
         - containerPort: 80
           name: insta-frontend
       imagePullSecrets:
-      - name: acr-secret
+      - name: acr-secret-instamunch
