--- a/k8s-specification/frontend-deployment.yaml
+++ b/k8s-specification/frontend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: insta-frontend
     spec:
       containers:
-      - image: voteacr.azurecr.io/demoproject:28
+      - image: instamunch.azurecr.io/instamunch:47
         name: insta-frontend
         ports:
         - containerPort: 80
