--- a/k8s-specification/backend-deployment.yaml
+++ b/k8s-specification/backend-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: backend-deployment
-          image: your-docker-hub-username/proxy-api:latest
+          image: instamunchbackend.azurecr.io/instamunchbackend:105
           ports:
             - containerPort: 3001
