--- a/k8s-specification/backend-deployment.yaml
+++ b/k8s-specification/backend-deployment.yaml
@@ -17,3 +17,5 @@ spec:
           image: instamunchbackend.azurecr.io/instamunchbackend:105
           ports:
             - containerPort: 3001
+      imagePullSecrets:
+      - name: acr-secret-backend 
