--- a/backend.yml
+++ b/backend.yml
@@ -1,7 +1,3 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
   paths:
     include:
@@ -11,24 +7,24 @@ resources:
 - repo: self
 
 variables:
-  # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: '21770199-7990-4bf1-afc5-fba326715988'
-  imageRepository: 'instamunchbackend'
-  containerRegistry: 'instamunchbackend.azurecr.io'
+  # Use secure variable groups or pipeline variables to store these values
+  dockerRegistryServiceConnection: '$(DOCKER_REGISTRY_SERVICE_CONNECTION)'
+  imageRepository: '$(IMAGE_REPOSITORY)'
+  containerRegistry: '$(CONTAINER_REGISTRY)'
   dockerfilePath: '$(Build.SourcesDirectory)/insta-munch-backend/DockerFile'
   tag: '$(Build.BuildId)'
 
 stages:
 - stage: Build
-  displayName: Build 
+  displayName: Build Docker Image
   jobs:
   - job: Build
-    displayName: Build
+    displayName: Build Docker Image
     pool:
       name: Default
     steps:
     - task: Docker@2
-      displayName: Build an image
+      displayName: Build Image
       inputs:
         containerRegistry: '$(dockerRegistryServiceConnection)'
         repository: '$(imageRepository)'
@@ -37,17 +33,17 @@ stages:
         tags: '$(tag)'
 
 - stage: Push
-  displayName: Push 
+  displayName: Push Docker Image
   dependsOn: Build
   condition: succeeded()
   jobs:
   - job: Push
-    displayName: Push
+    displayName: Push Docker Image
     pool:
       name: Default
     steps:
     - task: Docker@2
-      displayName: Push the image
+      displayName: Push Image
       inputs:
         containerRegistry: '$(dockerRegistryServiceConnection)'
         repository: '$(imageRepository)'
@@ -59,13 +55,13 @@ stages:
   dependsOn: Push
   condition: succeeded()
   jobs:
-    - job: Update
-      displayName: Update Manifests
-      pool:
-        name: Default
-      steps:
-      - task: ShellScript@2
-        displayName: Run Update Script
-        inputs:
-          scriptPath: 'Scripts/update.sh'
-          args: 'backend $(containerRegistry) $(imageRepository) $(tag)'
+  - job: Update
+    displayName: Update Kubernetes Manifests
+    pool:
+      name: Default
+    steps:
+    - task: ShellScript@2
+      displayName: Run Update Script
+      inputs:
+        scriptPath: 'Scripts/update.sh'
+        args: 'backend $(containerRegistry) $(imageRepository) $(tag)'
