--- a/frontend.yml
+++ b/frontend.yml
@@ -1,7 +1,3 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
   paths:
     include:
@@ -12,9 +8,9 @@ resources:
 
 variables:
   # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: '196e6a80-188a-4a42-92cd-902be46e9281'
-  imageRepository: 'instamunch'
-  containerRegistry: 'instamunch.azurecr.io'
+  dockerRegistryServiceConnection: '$(DOCKER_REGISTRY_SERVICE_CONNECTION)'
+  imageRepository: '$(IMAGE_REPOSITORY)'
+  containerRegistry: '$(CONTAINER_REGISTRY)'
   dockerfilePath: '$(Build.SourcesDirectory)/insta-munch/DockerFile'
   tag: '$(Build.BuildId)'
 
@@ -59,23 +55,20 @@ stages:
   dependsOn: Push
   condition: succeeded()
   jobs:
-    - job: Update
-      displayName: Update Manifests
-      pool:
-        name: Default
-      steps:
-      - task: ShellScript@2
-        displayName: Run Update Script
-        inputs:
-          scriptPath: 'Scripts/update.sh'
-          args: 'frontend $(containerRegistry) $(imageRepository) $(tag)'
-
-      - task: KubernetesManifest@1
-        inputs:
-          action: 'deploy'
-          connectionType: 'azureResourceManager'
-          azureSubscriptionConnection: 'Free Trial(1)(16eb4f92-52b3-42ad-82ce-c8c659321c97)'
-          azureResourceGroup: 'insta-much-rg'
-          kubernetesCluster: 'Insta-munch'
-          namespace: 'default'
-          manifests: 'k8s-specification/ingress.yaml'
+  - job: Update
+    displayName: Update Manifests
+    pool:
+      name: Default
+    steps:
+    - task: ShellScript@2
+      displayName: Run Update Script
+      inputs:
+        scriptPath: 'Scripts/update.sh'
+        args: 'frontend $(containerRegistry) $(imageRepository) $(tag)'
+    - task: KubernetesManifest@1
+      inputs:
+        action: 'deploy'
+        connectionType: 'azureResourceManager'
+        azureSubscriptionConnection: '$(AZURE_SUBSCRIPTION_CONNECTION)'
+        azureResourceGroup: '$(AZURE_RESOURCE_GROUP)'
+  
