--- a/k8s-specification/frontend-deployment.yaml
+++ b/k8s-specification/frontend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: insta-frontend
     spec:
       containers:
-      - image: instamunch.azurecr.io/instamunch:115
+      - image: $(CONTAINER_REGISTRY)/$(IMAGE_REPOSITORY):$(IMAGE_TAG)
         name: insta-frontend
         ports:
         - containerPort: 3000
